--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,26 @@
-# name: Deploy to AWS
+name: Deploy to AWS
 
-# on:
-#   push:
-#     branches:
-#       - master
+on:
+  push:
+    branches:
+      - master
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout the repository
-#         uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 1
-#       - name: Install Node.js
-#         uses: actions/setup-node@v1
-#         with:
-#           node-version: '>=13.2'
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: jessfraz/aws-fargate-action@master
+        env:
+          AWS_REGION = "us-west-2"
+          IMAGE = "r.j3ss.co/party-clippy"
+          PORT = "8080"
+          COUNT = "2"
+          CPU = "256"
+          MEMORY = "512"
+          BUCKET = "aws-fargate-action"
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       # - name: Install build dependencies
       #   run: yarn install --production
       # - name: Build static files
