--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Checkout the repository
         uses: jessfraz/aws-fargate-action@master
         env:
-          AWS_REGION = "us-west-2"
-          IMAGE = "r.j3ss.co/party-clippy"
-          PORT = "8080"
-          COUNT = "2"
-          CPU = "256"
-          MEMORY = "512"
-          BUCKET = "aws-fargate-action"
+          AWS_REGION: us-west-2
+          IMAGE: r.j3ss.co/party-clippy
+          PORT: 8080
+          COUNT: 2
+          CPU: 256
+          MEMORY: 512
+          BUCKET: aws-fargate-action
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       # - name: Install build dependencies
