update aws region to us-east-2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout the repository
         uses: jessfraz/aws-fargate-action@master
         env:
-          AWS_REGION: us-west-2
+          AWS_REGION: us-east-2
           IMAGE: r.j3ss.co/party-clippy
           PORT: 8080
           COUNT: 2
