try the new flow to deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,37 +6,12 @@ on:
       - master
 
 jobs:
-  deploy:
+  ecr-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: jessfraz/aws-fargate-action@master
-        env:
-          AWS_REGION: us-east-2
-          IMAGE: r.j3ss.co/party-clippy
-          PORT: 8080
-          COUNT: 2
-          CPU: 256
-          MEMORY: 512
-          BUCKET: seminioni-bucket
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      # - name: Install build dependencies
-      #   run: yarn install --production
-      # - name: Build static files
-      #   run: yarn build
-      #   env:
-      #     GITTER_TOKEN: ${{ secrets.GITTER_TOKEN }}
-      #     GITTER_ROOM_ID: ${{ secrets.GITTER_ROOM_ID }}
-      # - name: Install Google Cloud
-      #   uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      #   with:
-      #     version: '274.0.1'
-      #     service_account_key: ${{ secrets.GCLOUD_AUTH }}
-      # - name: Deploy files
-      #   run: yarn run --verbose ssdeploy deploy
-      #   env:
-      #     GCLOUD_APP: ${{ secrets.GCLOUD_APP }}
-      #     GCLOUD_PROJECT: ${{ secrets.GCLOUD_PROJECT }}
-      #     CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
-      #     CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+    - uses: Terranovax/aws-ecr-deploy@v1
+      with:
+        access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        account_id: ${{ secrets.AWS_ACCOUNT_ID }}
+        region: us-east-2
