--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,10 @@ jobs:
   ecr-deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: Terranovax/aws-ecr-deploy@v1
+    - uses: kciter/aws-ecr-action@v1
       with:
         access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         account_id: ${{ secrets.AWS_ACCOUNT_ID }}
+        repo: seminioni/test-aws-deploy
         region: us-east-2
